--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(vulkan)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(glfw3 3.3 REQUIRED)
+find_package(glm)
 find_package(Vulkan)
 
 add_executable(vulkan application.cpp main.cpp)
