--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(glfw3 3.3 REQUIRED)
 find_package(Vulkan)
 
-add_executable(vulkan application.cpp main.cpp)
+add_executable(vulkan vulkan.cpp application.cpp main.cpp)
 
 target_link_libraries(vulkan glfw)
 target_link_libraries(vulkan Vulkan::Vulkan)
